# BaiduEdgeboard

./: .gitignore  README.md  frame.sh
opencv-baidu/src/code/: camera_param.cpp  camera_param.h  common.h  headfile.h  imgproc.cpp  imgproc.h  motor.cpp  motor.h  pid.cpp  pid.h  smotor.cpp  smotor.h  uart.h  utils.c
opencv-baidu/src/recognition/: circle_recognition.cpp  circle_recognition.h  cross_recognition.cpp  cross_recognition.h  garage_recognition.cpp  garage_recognition.h  track_recognition.cpp  track_recognition.h
opencv-baidu/src/src/: SerialPort.cpp  SerialPort.h  main.cpp  main.h
res/model/yolov3_mobilenet_v1/: deploy_paddle.ro  io_paddle.json  nms.tar  post.onnx
src/: CMakeLists.txt
src/code/: camera_param.cpp  camera_param.h  common.h  controlCenter.cpp  controlCenter.h  detection.hpp  fuzzypid.cpp  fuzzypid.h  headfile.h  imgproc.cpp  imgproc.h  motor.cpp  motor.h  pid.cpp  pid.h  smotor.cpp  smotor.h  uart.h  value_config.cpp
src/config/: camera_config.json  motion.json  value_config.json
src/detection/: bridge.cpp  danger.cpp  racing.cpp  rescue.cpp
src/recognition/: circle_recognition.cpp  circle_recognition.h  cross_recognition.cpp  cross_recognition.h  garage_recognition.cpp  garage_recognition.h  track_recognition.cpp  track_recognition.h
src/src/: V4L2Capture.cpp  V4L2Capture.hpp  camera.cpp  main.cpp  main.h
